--- a/css/style.css
+++ b/css/style.css
@@ -88,4 +88,30 @@ body {
       margin-top: 7rem;
     }
   }
-  
+
+  .contagem{
+    width:300px;
+    height:70px;
+    background-color: #ffffff;
+    }
+    
+    .numero
+    {
+    min-width: 20px;
+    max-width: 55px;
+    background-color: #efefef;
+    color: #000000;
+    font-size: 22px;
+    margin: 5px;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    }
+    
+    .legenda{
+    height: 25px;
+    line-height: 10px;
+    font-size:12px;
+    background-color: #ffffff;
+    text-align: center;
+    }
