--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ color: #8B09FF;
     font-weight: 300;
     line-height: 1;
     letter-spacing: -.05rem;
+    color: #2B04E8;
   }
   
   
@@ -129,3 +130,33 @@ color: #8B09FF;
     background-color: #ffffff;
     text-align: center;
     }
+
+    .faltam{
+     
+font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 30px;
+line-height: 35px;
+text-align: center;
+
+color: #2B04E8;
+    }
+
+
+    .informativo{
+      
+
+font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 19px;
+text-align: center;
+
+color: #000000;
+    }
+
+
+
+    
