--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ font-size: 30px;
 line-height: 36px;
 text-align: center;
 color: #8B09FF;
+margin: auto;
 }
   
   
@@ -108,6 +109,7 @@ color: #8B09FF;
     width:300px;
     height:70px;
     background-color: #ffffff;
+    margin: auto;
     }
     
     .numero
