--- a/css/style.css
+++ b/css/style.css
@@ -114,8 +114,8 @@ margin: auto;
     
     .numero
     {
-    min-width: 20px;
-    max-width: 55px;
+    
+    width: 55px;
     background-color: #efefef;
     color: #000000;
     font-size: 22px;
