banner fluido e mobile css

--- a/css/style.css
+++ b/css/style.css
@@ -24,30 +24,7 @@ margin: auto;
 }
   
   
-  /* CUSTOMIZE THE CAROUSEL
-  -------------------------------------------------- */
-  
-  /* Carousel base class */
-  .carousel {
-    margin-bottom: 4rem;
-  }
-  /* Since positioning the image, we need to help out the caption */
-  .carousel-caption {
-    bottom: 3rem;
-    z-index: 10;
-  }
-  
-  /* Declare heights because of positioning of img element */
-  .carousel-item {
-    height: 32rem;
-  }
-  .carousel-item > img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    height: 32rem;
-  }
+
   
   
   /* MARKETING CONTENT
@@ -81,21 +58,23 @@ margin: auto;
     letter-spacing: -.05rem;
     color: #2B04E8;
   }
-  
+  .img-fluid-desk{
+    display: block;
+  }
+  .img-fluid-mobile{
+    display: none;
+  }
   
   /* CSS RESPONSIVO
   -------------------------------------------------- */
   
-  @media (min-width: 40em) {
-    /* Bump up size of carousel content */
-    .carousel-caption p {
-      margin-bottom: 1.25rem;
-      font-size: 1.25rem;
-      line-height: 1.4;
+  @media (max-width: 900px) {
+    /* imagem responsiva*/
+    .img-fluid-desk{
+      display: none;
     }
-  
-    .featurette-heading {
-      font-size: 50px;
+    .img-fluid-mobile{
+      display: block;
     }
   }
   
