mudança css contagem

--- a/css/style.css
+++ b/css/style.css
@@ -94,14 +94,19 @@ margin: auto;
     .numero
     {
     
-    width: 55px;
-    background-color: #efefef;
-    color: #000000;
-    font-size: 22px;
+    width: 66px;
+    background-color: #ffffff;
+    color: #8B09FF;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
     margin: 5px;
     text-align: center;
-    border-radius: 5px;
     padding: 5px;
+    border: 1px solid #8F8F8F;
+    box-sizing: border-box;
+    border-radius: 5px;
     }
     
     .legenda{
