--- a/css/style.css
+++ b/css/style.css
@@ -244,4 +244,39 @@ font-weight: normal;
 
 }
 
+.nomePalestrante{
+  font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 18px;
+line-height: 21px;
+text-align: center;
+
+color: #000000;
+
+}
+.bioPalestrante{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: center;
+  
+  color: #000000;
+}
     
+
+.textoLoren{
+  font-family: Roboto;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 19px;
+text-align: center;
+
+color: #000000;
+}
+.invi{
+  display: none;
+}
