--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ color: #898989;
   .img_rec_r{
     position: absolute;
 width: 100%;
-height: 300px;
+height: 250px;
 left: 0px;
 margin-top: 25px;
 background: #E2D0F2;
@@ -100,7 +100,7 @@ background: #E2D0F2;
   .img_rec_a{
     position: absolute;
 width: 100%;
-height: 300px;
+height: 250px;
 left: 0px;
 margin-top: 25px;
 
@@ -110,7 +110,7 @@ background: #BBDAFF;
   /* CSS RESPONSIVO
   -------------------------------------------------- */
   
-  @media (max-width: 900px) {
+  @media (max-width: 1000px) {
     /* imagem responsiva*/
     .img-fluid-desk{
       display: none;
@@ -120,7 +120,7 @@ background: #BBDAFF;
     }
   }
 
-  @media (max-width: 900px) {
+  @media (max-width: 1000px) {
     /* imagem responsiva fundo dos palestrantes*/
     .img_rec_r{
       position: absolute;
@@ -279,4 +279,8 @@ color: #000000;
 }
 .invi{
   display: none;
+}
+
+.btnLinkedinRoxo{
+  background-image: url(../img/linkedin.png);
 }
